Fix mobile view styles

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 		<div class="menu">
 			<div class="menuItems">
 				<ul class="main-menu">
-					<li><a href="#home">HOME</a></li>
-					<li><a href="#aboutus">ABOUT US</a></li>
-					<li><a href="#portafolio">PORTAFOLIO</a></li>
-					<li><a href="#services">SERVICES</a></li>
-					<li><a href="#contactus">LET'S TALK</a></li>
+					<a href="#home"><li>HOME</li></a>
+					<a href="#aboutus"><li>ABOUT US</li></a>
+					<a href="#portafolio"><li>PORTAFOLIO</li></a>
+					<a href="#services"><li>SERVICES</li></a>
+					<a href="#contactus"><li>LET'S TALK</li></a>
 				</ul>
 				<ul class="social-buttons">
 					<div class="first-block">
