Add animations to all elements

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
 			</div>
 			<!--HOME SECTION-->		
 			<div class="section home-bottom child">
-				<div class="video-wrapper">
+				<!--<div class="video-wrapper">
 					<video autoplay muted loop plays-inline class="home-video" data-autoplay>
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
-				</div>				
+				</div>-->				
 				<div class="home-bottom-text">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
@@ -150,7 +150,7 @@
 					<p id="fade_in">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
 						sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.
 					</p>
-					<div class="discover-more">
+					<div class="discover-more animate">
 						<a href="#aboutus">DISCOVER</a>
 					</div>		
 				</div>				
@@ -197,7 +197,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="about-second-more">
+							<div class="about-second-more animate">
 								<a id="openModalBtnStory" href="#">CONTACT US 
 									<span>
 										<svg width="51" height="24" viewBox="0 0 51 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -220,7 +220,7 @@
 							</div>			
 						</div>
 						<div class="wrapper">
-							<label id="left" class="carousel__control carousel__control--backward">
+							<label id="left" class="carousel__control carousel__control--backward animate">
 								<a class="back-button" href="#">
 									<span>
 										<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -279,7 +279,7 @@
 									</div>
 								</div>
 							</div>
-							<label id="right" class="carousel__control carousel__control--forward">
+							<label id="right" class="carousel__control carousel__control--forward animate">
 								<a class="next-button" href="#">
 									<span>
 										<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -298,7 +298,7 @@
 						<h4>Our Dynamic Team of Experts at Sadaf Media</h4> 
 						<h4>At Sadaf Media, we take great pride in our exceptional tea</h4>
 					</div>
-					<div class="gallery-team">
+					<div class="gallery-team animate">
 						<div class="gallery-container-team">
 						<img class="gallery-item-team gallery-item-team-1" src="images/team2/1.png" alt="" data-index="1">
 						<img class="gallery-item-team gallery-item-team-2" src="images/team2/2.png" alt="" data-index="2">
@@ -355,7 +355,7 @@
 							</p>							
 						</div>
 					</div>
-					<div class="service-wrapper">
+					<div class="service-wrapper animate">
 						<div class="services-more">
 							<div class="service first">
 								<img class="icon" src="images/services/1/icon.png" alt="service icon">
@@ -396,7 +396,7 @@
 				<div class="work-text">
 					<h1>THE WAY WE WORK</h1>
 					<h4>IT’S WHAT’S ON THE INSIDE THAT MATTERS</h4>
-					<div class="work-filter">
+					<div class="work-filter animate">
 						<ul class="filter-menu">
 							<a class="All" href="#"><li>ALL</li></a>
 							<a class="Graphic" href="#"><li>GRAPHIC DESIGN</li></a>
@@ -406,7 +406,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="gallery">
+				<div class="gallery animate">
 					<div class="gallery-container">
 					  <img class="gallery-item gallery-item-1" src="images/work/1.png" alt="" data-index="1">
 					  <img class="gallery-item gallery-item-2" src="images/work/2.png" alt="" data-index="2">
@@ -431,19 +431,6 @@
 					  </div>
 					</div>    
 				</div>
-				<!--<div class="wrapper">
-					<label id="left" class="carousel__control carousel__control--backward"></label>
-					<div class="carousel filter-works">
-					  <img class="graphic" src="images/work/1.png" alt="img" draggable="false">
-					  <img class="social" src="images/work/2.png" alt="img" draggable="false">
-					  <img class="Video" src="images/work/3.png" alt="img" draggable="false">
-					  <img class="graphic" src="images/work/4.png" alt="img" draggable="false">
-					  <img class="animation" src="images/work/1.png" alt="img" draggable="false">
-					  <img class="social" src="images/work/2.png" alt="img" draggable="false">
-					  <img class="video" src="images/work/3.png" alt="img" draggable="false">
-					</div>
-					<label id="right" class="carousel__control carousel__control--forward"></label>
-				</div>-->	
 			</div>
 			<!--BLOG SECTION-->
 			<div class="section blog child">
@@ -451,7 +438,7 @@
 					<div class="blog-text">
 						<h1>UNLEASHING MARKETING MARVELS</h1>
 						<h4>READ OUR LASTEST BLOG POST</h4>
-						<div class="blog-filter">
+						<div class="blog-filter animate">
 							<ul class="filter-menu">
 								<a href="#latest"><li>LASTEST</li></a>
 								<a href="#marketing"><li>MARKETING DIGITAL</li></a>
@@ -460,7 +447,7 @@
 							</ul>
 						</div>					
 					</div>	
-					<div class="gallerry-wrapper">
+					<div class="gallerry-wrapper animate">
 						<div class="gallery">
 							<figure class="gallery__item gallery__item--1">
 								<img src="images/blog/1.png" alt="Gallery image 1" class="gallery__img">
@@ -540,14 +527,14 @@
 						fresh ideas.
 					</p>
 					<div class="contactus-social">
-						<img src="images/social/instagram.png" height="45px" alt="instagram icon">
-						<img src="images/social/mail.png" height="45px" alt="mail icon">
-						<img src="images/social/linkedin.png" height="45px" alt="linkedin icon">
-						<img src="images/social/facebook.png" height="45px" alt="facebook icon">
-						<img src="images/social/twitter.png" height="45px" alt="twitter icon">
+						<img class="team-item" src="images/social/instagram.png" height="45px" alt="instagram icon">
+						<img class="team-item" src="images/social/mail.png" height="45px" alt="mail icon">
+						<img class="team-item" src="images/social/linkedin.png" height="45px" alt="linkedin icon">
+						<img class="team-item" src="images/social/facebook.png" height="45px" alt="facebook icon">
+						<img class="team-item" src="images/social/twitter.png" height="45px" alt="twitter icon">
 					</div>
-					<div class="contactus-number">02 201 2500</div>
-					<div class="contactus-more">
+					<div class="contactus-number animate">02 201 2500</div>
+					<div class="contactus-more animate">
 						<a id="openModalBtnContact" href="#">CONTACT US 
 							<span>
 								<svg width="51" height="24" viewBox="0 0 51 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -572,7 +559,7 @@
 						<p>Al Zahiyah - Abu Dhabi Mall</p>
 						<p>Abu Dhabi . Dubai</p>
 					</div>					
-					<div class="location-more">
+					<div class="location-more animate">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14526.86357295134!2d54.37882661663857!3d24.460640420939978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e689d396c5bf7%3A0x1ec8bf4686636030!2sSheikha%20Jameela%20Tower!5e0!3m2!1ses-419!2sae!4v1690118842253!5m2!1ses-419!2sae" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>									
 				</div>				
@@ -809,6 +796,24 @@
 							const text = section.querySelectorAll('p');
 							const tl3 = new TimelineMax({ delay: 1 });
 							tl3.fromTo(text, 1.2, {y: "80", opacity: 0}, {y: 0, opacity: 1});
+						}
+						if (section.querySelector('.animate')) {
+							const animation = section.querySelectorAll('.animate');
+							const tl4 = new TimelineMax({ delay: 1.2 });
+							tl4.fromTo(animation, 1.4, {y: "80", opacity: 0}, {y: 0, opacity: 1});
+						}
+						if (section.querySelector('.team-item')) {
+							const teamItem = section.querySelectorAll('.team-item');
+							const tl5 = new TimelineMax({ delay: 1.2 });
+							teamItem.forEach((item, index) => {
+								tl5.fromTo(
+								  item,
+								  1,
+								  { y: "150", opacity: 0 },
+								  { y: 0, opacity: 1 },
+								  `-=${1 - 0.2 * index}`
+								);
+							});
 						}
 					}															
 				}
