--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<h1>OUR STORY</h1>
 							<h4>THE INTEGRATED MARKETING AGENCY FOR ASPIRATIONAL BRANDS</h4>
 							<div class="text-wrapper">
-								<div class="text-content">
+								<div class="text-content scrollable-content">
 									<p>We are a forward-thinking, full-service branding and marketing agency, 
 										located in Abu Dhabi, United Arab Emirates, committed to making your 
 										brand stand out in today’s saturated marketplace.
@@ -703,6 +703,7 @@
 				continuousHorizontal: true,
 				dragAndMove: true,
     			slidesNavPosition: 'bottom',
+  				normalScrollElements: '.scrollable-content',
 				anchors: ['home', 'home-bottom', 'aboutus', 'aboutus', 'aboutus', 'services', 'work', 'blog', 'contactus', 'location', 'footer'],
 				menu: '#menu',
 				afterLoad: function(anchorLink, index){
