--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
 					<video autoplay muted loop plays-inline class="home-video" data-autoplay>
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
-				</div>-->				
-				<div class="home-bottom-text">
+				</div>-->	
+				<div class="parallax-bg"></div>			
+				<div class="home-bottom-text" data-card3d="">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
 						with the Leading Marketing Agency
@@ -157,9 +158,11 @@
 			</div>
 				<!--ABOUT US SECTION FIRST-->
 				<div class="section about-second child">
-					<video autoplay muted loop plays-inline class="back-video" data-autoplay>
-						<source src="images/dessert.mp4" type="video/mp4">
-					</video>
+					<div class="parallax-bg">
+						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+							<source src="images/dessert.mp4" type="video/mp4">
+						</video>
+					</div>					
 					<div class="about-second-wrapper">
 						<div class="about-second-text">
 							<h1>OUR STORY</h1>
@@ -211,6 +214,7 @@
 				</div>	
 				<!--ABOUT US TEAM SECTION-->
 				<div class="section about-third child" id="about_third">
+					<div class="parallax-bg"></div>
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
@@ -327,32 +331,34 @@
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<h1>HOW WE WORK</h1>
-					<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
-					<div class="text-wrapper">
-						<div class="text-content">
-							<p>At Sadaf Media, we can’t wait to hear about your project and begin 
-								developing an exciting integrated strategy and meaningful vision for 
-								your brand, which we know is the first step towards generating quality 
-								leads and delivering the growth you want. 
-							</p>
-							<p>Without the right team, the distinctive qualities that make a brand special 
-								can easily get lost, which is why we always take the time to really get to 
-								know our clients. This enables our creative experts to come up with the 
-								far-reaching solutions that we know will produce truly outstanding results 
-								and redefine your position in the market. 
-							</p>
-						</div>
-						<div class="text-content">
-							<p>We will work closely with you to build on your brand’s unique strengths, 
-								while producing an engaging, exciting and experiential narrative, both 
-								online and offline, that will truly resonate with audiences.
-							<p>					
-								We are more than happy to shoulder this responsibility and are confident 
-								in our ability to produce the content that will elevate your brand. 
-								We will put your message out there, where it belongs – in the market, 
-								getting people talking, driving traffic and achieving results.
-							</p>							
+					<div data-card3d="">
+						<h1>HOW WE WORK</h1>
+						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
+						<div class="text-wrapper">
+							<div class="text-content">
+								<p>At Sadaf Media, we can’t wait to hear about your project and begin 
+									developing an exciting integrated strategy and meaningful vision for 
+									your brand, which we know is the first step towards generating quality 
+									leads and delivering the growth you want. 
+								</p>
+								<p>Without the right team, the distinctive qualities that make a brand special 
+									can easily get lost, which is why we always take the time to really get to 
+									know our clients. This enables our creative experts to come up with the 
+									far-reaching solutions that we know will produce truly outstanding results 
+									and redefine your position in the market. 
+								</p>
+							</div>
+							<div class="text-content">
+								<p>We will work closely with you to build on your brand’s unique strengths, 
+									while producing an engaging, exciting and experiential narrative, both 
+									online and offline, that will truly resonate with audiences.
+								<p>					
+									We are more than happy to shoulder this responsibility and are confident 
+									in our ability to produce the content that will elevate your brand. 
+									We will put your message out there, where it belongs – in the market, 
+									getting people talking, driving traffic and achieving results.
+								</p>							
+							</div>
 						</div>
 					</div>
 					<div class="service-wrapper animate">
@@ -680,6 +686,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" 
 			crossorigin="anonymous" referrerpolicy="no-referrer">
 		</script>
+		<script src="js/card3d.js"></script>
 		<script type="text/javascript" src="js/fullpage.js"></script>
 		<script>
 			// Remove the loading screen when the content is loaded
@@ -702,6 +709,11 @@
 				loopHorizontal: true,
 				continuousHorizontal: true,
 				dragAndMove: true,
+				parallax: true, 
+				parallaxOptions: {
+					type: 'reveal', 
+					percentage: 50
+				},
     			slidesNavPosition: 'bottom',
   				normalScrollElements: '.scrollable-content',
 				anchors: ['home', 'home-bottom', 'aboutus', 'aboutus', 'aboutus', 'services', 'work', 'blog', 'contactus', 'location', 'footer'],
