Fix card3d animate

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					</video>
 				</div>-->	
 				<div class="parallax-bg"></div>			
-				<div class="home-bottom-text" data-card3d="">
+				<div class="home-bottom-text" data-card3d="" data-card3d-delta="5">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
 						with the Leading Marketing Agency
@@ -331,7 +331,7 @@
 			<!--SERVICES SECTION-->
 			<div class="section services child">
 				<div class="services-text">
-					<div data-card3d="">
+					<div data-card3d="" data-card3d-delta="5">
 						<h1>HOW WE WORK</h1>
 						<h4>WE MAKE BUILDING YOUR BUSINESS OUR BUSINESS</h4>
 						<div class="text-wrapper">
