Adding parallax plugin

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<source src="images/dessert.mp4" type="video/mp4">
 					</video>
 				</div>-->	
-				<div class="parallax-bg"></div>			
+				<div class="fp-bg"></div>			
 				<div class="home-bottom-text" data-card3d="" data-card3d-delta="5">
 					<h1 id="parallax-text">
 						<span>Unlock Your Digital Potential</span>
@@ -158,7 +158,7 @@
 			</div>
 				<!--ABOUT US SECTION FIRST-->
 				<div class="section about-second child">
-					<div class="parallax-bg">
+					<div class="fp-bg">
 						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
 							<source src="images/dessert.mp4" type="video/mp4">
 						</video>
@@ -214,7 +214,7 @@
 				</div>	
 				<!--ABOUT US TEAM SECTION-->
 				<div class="section about-third child" id="about_third">
-					<div class="parallax-bg"></div>
+					<div class="fp-bg"></div>
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
@@ -297,6 +297,7 @@
 				</div>
 				<!--ABOUT US TEAM2 SECTION-->
 				<div class="section team child">
+					<div class="fp-bg"></div>
 					<div class="team-text">
 						<h1>OUR TEAM</h1>
 						<h4>Our Dynamic Team of Experts at Sadaf Media</h4> 
@@ -330,6 +331,7 @@
 				</div>
 			<!--SERVICES SECTION-->
 			<div class="section services child">
+				<div class="fp-bg"></div>
 				<div class="services-text">
 					<div data-card3d="" data-card3d-delta="5">
 						<h1>HOW WE WORK</h1>
@@ -362,6 +364,7 @@
 						</div>
 					</div>
 					<div class="service-wrapper animate">
+						<div class="fp-bg"></div>
 						<div class="services-more">
 							<div class="service first">
 								<img class="icon" src="images/services/1/icon.png" alt="service icon">
@@ -399,6 +402,7 @@
 			</div>			
 			<!--WORK SECTION-->
 			<div class="section work child">
+				<div class="fp-bg"></div>
 				<div class="work-text">
 					<h1>THE WAY WE WORK</h1>
 					<h4>IT’S WHAT’S ON THE INSIDE THAT MATTERS</h4>
@@ -440,6 +444,7 @@
 			</div>
 			<!--BLOG SECTION-->
 			<div class="section blog child">
+				<div class="fp-bg"></div>
 				<div class="container">
 					<div class="blog-text">
 						<h1>UNLEASHING MARKETING MARVELS</h1>
@@ -522,7 +527,8 @@
 			</div>
 			<!--CONTACT US SECTION-->
 			<div class="section contactus child">
-				<video autoplay muted loop class="video-location" data-autoplay>
+				<div class="fp-bg"></div>
+				<video autoplay muted loop class="video-location fp-bg" data-autoplay>
 					<source src="images/abu_dhabi2.mp4" type="video/mp4">
 				</video>
 				<div class="contactus-text">
@@ -556,7 +562,7 @@
 			</div>
 			<!--LOCATION SECTION-->
 			<div class="section location child">
-				<video autoplay muted loop class="back-video" data-autoplay>
+				<video autoplay muted loop class="back-video fp-bg" data-autoplay>
 					<source src="images/abu_dhabi.mp4" type="video/mp4">
 				</video>
 				<div class="location-text">
@@ -687,6 +693,7 @@
 			crossorigin="anonymous" referrerpolicy="no-referrer">
 		</script>
 		<script src="js/card3d.js"></script>
+		<script type="text/javascript" src="js/fullpage.parallax.min.js"></script>
 		<script type="text/javascript" src="js/fullpage.js"></script>
 		<script>
 			// Remove the loading screen when the content is loaded
@@ -702,7 +709,7 @@
 				easing: 'easeInOutCubic',
     			easingcss3: 'ease',
 				fitToSection: true,
-    			fitToSectionDelay: 800,
+    			fitToSectionDelay: 1000,
 				verticalCentered: true,
     			scrollHorizontally: true,
 				slidesNavigation: true,
@@ -712,7 +719,8 @@
 				parallax: true, 
 				parallaxOptions: {
 					type: 'reveal', 
-					percentage: 50
+					percentage: 62,
+					property: 'translate'
 				},
     			slidesNavPosition: 'bottom',
   				normalScrollElements: '.scrollable-content',
