--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<div class="section about-second child">
 					<div class="fp-bg">
 						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
-							<source src="images/dessert.mp4" type="video/mp4">
+							<source src="images/dessert_dark.mp4" type="video/mp4">
 						</video>
 					</div>					
 					<div class="about-second-wrapper">
@@ -214,7 +214,11 @@
 				</div>	
 				<!--ABOUT US TEAM SECTION-->
 				<div class="section about-third child" id="about_third">
-					<div class="fp-bg"></div>
+					<div class="fp-bg">
+						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+							<source src="images/dessert_dark.mp4" type="video/mp4">
+						</video>
+					</div>
 					<div class="about-third-wrapper">
 						<div class="about-third-text">
 							<h1>OUR TEAM</h1>
@@ -228,7 +232,7 @@
 								<a class="back-button" href="#">
 									<span>
 										<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="black"/>
+										<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="white"/>
 										</svg>
 									</span>
 								</a>
@@ -287,7 +291,7 @@
 								<a class="next-button" href="#">
 									<span>
 										<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="black"/>
+										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
 										</svg>
 									</span>
 								</a>   
@@ -297,7 +301,11 @@
 				</div>
 				<!--ABOUT US TEAM2 SECTION-->
 				<div class="section team child">
-					<div class="fp-bg"></div>
+					<div class="fp-bg">
+						<video autoplay muted loop plays-inline class="back-video" data-autoplay>
+							<source src="images/dessert_dark.mp4" type="video/mp4">
+						</video>
+					</div>
 					<div class="team-text">
 						<h1>OUR TEAM</h1>
 						<h4>Our Dynamic Team of Experts at Sadaf Media</h4> 
@@ -314,14 +322,14 @@
 							<a class="back-button gallery-controls-team-previous" href="#">
 							<span>
 								<svg width="47" height="23" viewBox="0 0 47 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="black"/>
+								<path d="M0.439339 10.4393C-0.146446 11.0251 -0.146446 11.9749 0.439339 12.5607L9.98528 22.1066C10.5711 22.6924 11.5208 22.6924 12.1066 22.1066C12.6924 21.5208 12.6924 20.5711 12.1066 19.9853L3.62132 11.5L12.1066 3.01472C12.6924 2.42893 12.6924 1.47918 12.1066 0.893395C11.5208 0.307608 10.5711 0.307608 9.98528 0.893395L0.439339 10.4393ZM46.5 10L1.5 10L1.5 13L46.5 13L46.5 10Z" fill="white"/>
 								</svg>
 							</span>
 							</a>
 							<a class="next-button gallery-controls-team-next" href="#">
 							<span>
 								<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="black"/>
+								<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
 								</svg>
 							</span>
 							</a>        
@@ -517,7 +525,7 @@
 							<a href="#">
 								<span>
 									<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="black"/>
+										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
 									</svg>
 								</span>
 							</a>
@@ -528,8 +536,8 @@
 			<!--CONTACT US SECTION-->
 			<div class="section contactus child">
 				<div class="fp-bg"></div>
-				<video autoplay muted loop class="video-location fp-bg" data-autoplay>
-					<source src="images/abu_dhabi2.mp4" type="video/mp4">
+				<video autoplay muted loop plays-inline class="video-location fp-bg" data-autoplay>
+					<source src="images/abu_dhabi_dark.mp4" type="video/mp4">
 				</video>
 				<div class="contactus-text">
 					<h1>LETS TALK</h1>
